--- a/static/sass/layout/_grid.sass
+++ b/static/sass/layout/_grid.sass
@@ -1,5 +1,5 @@
 body
-    border: 1rem solid rgba(0, 0, 0, 0)
+    // border: 1rem solid rgba(0, 0, 0, 0)
     // @include breakpoint(sm)
         // display: grid
         // grid-template-areas: "nav nav" "intro intro" "blog-map content" "disqus disqus" "instagram instagram" "foot foot"
